# repo-loader

./: .gitignore  .gptignore  MANIFEST.in  README.md  lint.sh  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: release_pypi.yml
src/gpt_repository_loader/: .gptignore  cli.py  gpt_repository_loader.py
src/repo_loader/: cli.py  repo_loader.py  utils.py
tests/: test_cli.py  test_gpt_repository_loader.py
tests/test_data/: expected_output.txt
